# ChangeLog for media-gfx/rawtherapee
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/rawtherapee/ChangeLog,v 1.14 2013/06/05 09:12:19 radhermit Exp $

*rawtherapee-4.0.11 (05 Jun 2013)

  05 Jun 2013; Tim Harder <radhermit@gentoo.org> +rawtherapee-4.0.11.ebuild:
  Version bump.

  30 Apr 2013; Tim Harder <radhermit@gentoo.org> rawtherapee-4.0.10.ebuild:
  Fix libcanberra dep to require gtk support (bug #467904).

  15 Mar 2013; Tim Harder <radhermit@gentoo.org> -rawtherapee-4.0.8.ebuild,
  -files/rawtherapee-4.0.8-nohg.patch, -rawtherapee-4.0.9.ebuild:
  Remove old.

*rawtherapee-4.0.10 (15 Mar 2013)

  15 Mar 2013; Tim Harder <radhermit@gentoo.org> +rawtherapee-4.0.10.ebuild:
  Version bump (bug #460884).

*rawtherapee-4.0.9-r1 (12 Feb 2013)

  12 Feb 2013; Tim Harder <radhermit@gentoo.org> +rawtherapee-4.0.9-r1.ebuild,
  +files/rawtherapee-4.0.9-desktop.patch:
  Revision bump, remove inode/directory from mimetype in desktop file (bug
  #420081).

  04 Jun 2012; Tim Harder <radhermit@gentoo.org>
  -files/rawtherapee-4.0.4-nohg.patch, -rawtherapee-4.0.6.ebuild:
  Remove old.

*rawtherapee-4.0.9 (04 Jun 2012)

  04 Jun 2012; Tim Harder <radhermit@gentoo.org> +rawtherapee-4.0.9.ebuild,
  +files/rawtherapee-4.0.9-no-hg.patch:
  Version bump.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> rawtherapee-4.0.6.ebuild,
  rawtherapee-4.0.8.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  01 May 2012; Tim Harder <radhermit@gentoo.org> -rawtherapee-4.0.4.ebuild,
  -rawtherapee-4.0.5.ebuild:
  Remove old.

*rawtherapee-4.0.8 (01 May 2012)

  01 May 2012; Tim Harder <radhermit@gentoo.org> +rawtherapee-4.0.8.ebuild,
  +files/rawtherapee-4.0.8-nohg.patch:
  Version bump (bug #401683).

*rawtherapee-4.0.6 (07 Dec 2011)

  07 Dec 2011; Tim Harder <radhermit@gentoo.org> +rawtherapee-4.0.6.ebuild:
  Version bump.

*rawtherapee-4.0.5 (11 Nov 2011)
