@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/rawtherapee
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/rawtherapee/ChangeLog,v 1.14 2013/06/05 09:12:19 radhermit Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/rawtherapee/ChangeLog,v 1.15 2014/01/24 08:34:02 radhermit Exp $
+
+*rawtherapee-4.0.12 (24 Jan 2014)
+
+  24 Jan 2014; Tim Harder <radhermit@gentoo.org> +rawtherapee-4.0.12.ebuild:
+  Version bump (bug #498244 by DrSlony).
 
 *rawtherapee-4.0.11 (05 Jun 2013)
 
